syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tiendaservice.grpc";


service OrdenService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ChangeOrderState(ChangeOrderStateRequest) returns (ChangeOrderStateResponse);
    rpc ListarOrdenesByTienda(ListarOrdenesRequest) returns (ListarOrdenesResponse);
}

service NovedadesService {
    rpc ListarNovedades(EmptyNovedad) returns (ListarNovedadesResponse);
    rpc DeleteNovedad(DeleteNovedadRequest) returns (DeleteNovedadResponse);
}

service TiendaService {
    rpc GetTienda(GetTiendaRequest) returns (GetTiendaResponse);
    rpc GetTiendaByCodigo(GetTiendaByCodigoRequest) returns (GetTiendaResponse);
    rpc RegistrarTienda(RegistrarTiendaRequest) returns (RegistrarTiendaResponse);
    rpc UpdateTienda(UpdateTiendaRequest) returns (UpdateTiendaResponse);
    rpc ListarTiendas(EmptyTienda) returns (ListarTiendasResponse);
    rpc GetTiendasByEstado(GetTiendaByEstadoRequest) returns (ListarTiendasResponse);
    rpc DeleteTienda(DeleteTiendaRequest) returns (DeleteTiendaResponse);
}

service TiendaProductService {
    rpc AddTiendaProduct(AddTiendaProductRequest) returns (AddTiendaProductResponse);
    rpc GetTiendaProduct(GetTiendaProductRequest) returns (GetTiendaProductResponse);
    rpc DeleteTiendaProduct(DeleteTiendaProductRequest) returns (DeleteTiendaProductResponse);
    rpc ObtenerProductosPorTienda(TiendaProductsRequest) returns (TiendaProductsResponse);
    rpc ObtenerProductos(EmptyTienda) returns (TiendaProductsResponse);
    rpc AsociarProductos(AsociarProductosRequest) returns (AsociarProductosResponse);
}


message ListarOrdenesRequest{
    string codigoTienda = 1;
}

message DeleteNovedadRequest {
    int64 id = 1;
}

message DeleteNovedadResponse {
    bool success = 1;
    string message = 2;
}


message ListarNovedadesResponse{
    repeated NovedadesInfo novedades = 1;
}

message ListarOrdenesResponse{
    repeated OrdenesInfo ordenes = 1;
}

message OrdenesInfo{
    string codigoTienda = 1;
    string observaciones = 2;
    string estado = 3;
    string fechaSolicitud = 4;
    string fechaRecepcion = 5;
    OrdenDespacho ordenDespacho = 6;

}

message OrdenDespacho{
    string fechaEstimadaEnvio = 1;
}

message NovedadesInfo{
    int64 id = 1;
    string nombre = 2;
    string codigo = 3;
    string foto = 4;
    string color = 5;
    string talle = 6;
}



message CreateOrderRequest{
    string codigoTienda = 1;
    string observaciones = 2;
    repeated ItemOrdenDtoGrpc itemOrdenDtoGrpc = 3;
}

message ItemOrdenDtoGrpc{
    int64 id = 1;
    string codigoArticulo = 2;
    string color = 3;
    string talle = 4;
    int32 cantidadSolicitada = 5;
}


message CreateOrderResponse{
    string codigoTienda = 1;
    string observaciones = 2;
    repeated ItemOrdenDtoGrpc itemOrdenDtoGrpc = 3;
}

message ChangeOrderStateRequest{
    int64 id = 1;
}

message ChangeOrderStateResponse{
    string codigoTienda = 1;
    string observaciones = 2;
}


message AsociarProductosRequest {
    repeated int64 tiendaIds = 1;
    int64 productId = 2;
}

message AsociarProductosResponse {
    bool success = 1;
    string message = 2;
}

message RegistrarTiendaRequest{
    string codigo=1;
    bool estado=2;
    string direccion = 3;
    string ciudad = 4;
    string provincia = 5;
}

message RegistrarTiendaResponse{
      string codigo=1;
      bool estado=2;
      string direccion = 3;
      string ciudad = 4;
      string provincia = 5;
}


message GetTiendaRequest {
    int64 id = 1;
}

message GetTiendaByCodigoRequest {
    string codigo = 1;
}

message GetTiendaResponse {
    int64 id = 1;
    string codigo = 2;
    bool estado = 3;
}

message UpdateTiendaRequest {
    int64 id = 1;
    string codigo=2;
    bool estado=3;
    string direccion = 4;
    string ciudad = 5;
    string provincia = 6;
}

message UpdateTiendaResponse {
    string codigo=1;
    bool estado=2;
    string direccion = 3;
    string ciudad = 4;
    string provincia = 5;
}

message ListarTiendasResponse {
    repeated TiendaInfo tiendasInfo = 1;
}

message TiendaInfo {
    int64 id = 1;
    string codigo = 2;
    bool estado = 3;
    string direccion = 4;
    string ciudad = 5;
    string provincia = 6;
}

message DeleteTiendaRequest {
    int64 id = 1;
}

message DeleteTiendaResponse {
    bool success = 1;
    string message = 2;
}


message GetTiendaByEstadoRequest {
    bool estado = 1;
}


message AddTiendaProductRequest {
    int64 tiendaId = 1;
    int64 productId = 2;
    int32 stock = 3;

}

message AddTiendaProductResponse {
    string message = 1;
    bool success = 2;
}

message GetTiendaProductRequest {
    int64 id = 1;
}

message GetTiendaProductResponse {
    int64 tiendaId = 1;
    int64 productId = 2;
    int32 stock = 3;

}

message DeleteTiendaProductRequest {
    int64 id = 1;
}

message DeleteTiendaProductResponse {
    string message = 1;
    bool success = 2;
}

message TiendaProductResponse {
    int64 tiendaId = 1;
    int64 productoId = 2;
    string nombre = 3;
    string codigo = 4;
    string foto = 5;
    string color = 6;
    string talle = 7;
    int32 stock = 8;
}

message TiendaProductsRequest {
    int64 tiendaId = 1;
}



message TiendaProductsResponse {
    repeated TiendaProductResponse productos = 1;
}

message EmptyTienda{}


message EmptyNovedad{}

